# streaming-data-dp-201

./: .gitignore  Dockerfile  docker-compose.yml  prod_type_docker-compose_wip.yml  readme.md  run-kafka.sh  start-kafka-env.sh  test.py
click_flow/: pv_random_data_generatorv2.py
click_flow/archive/: pv_random_data_generator.py
click_flow/json_schema/: auction_cg.json  auction_ds.json  page_view_schema.json
click_flow_wip/: auction_log_generator.py  readme.md
click_flow_wip/archive/: cg_log_generator.py
docker/: Dockerfile  readme.md
docker/scripts/: start.sh
s3d_producer/: kafka_consumer.py  kafka_consumer_batch.py  kafka_consumer_stream.py  pyproject.toml  readme.md  websocket_client.py  websocket_emitter.py  write_to_iceberg.py
s3d_simulator/: kafka_consumer.py  pyproject.toml  readme.md  requirements.txt
s3d_simulator/deh/: readme.md
s3d_simulator/iceberg/: create_iceberg_table.py
s3d_simulator/kafka-utils/: create_topic.py
scripts/: start.sh
