[tool.poetry]
name = "Sample Streaming System"
version = "0.1.0"
description = ""
authors = ["Sanjeet Shukla"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
websockets = "^12.0"
confluent-kafka = "^2.3.0"
minio = "^7.2.15"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"